--- a/index.html
+++ b/index.html
@@ -195,11 +195,13 @@
     <section class="tools" id="image-tools">
         <h2>Image Tools</h2>
         <div class="tool-cards">
-            <div class="tool-card">
+            <a href="image-compressor.html" class="tool-card-link">
+                <div class="tool-card">
                 <i class="fas fa-image"></i>
-                <h3>Image Compressor</h3>
+                    <h3>Image Compressor</h3>
                 <p>Compress images without losing quality. Perfect for web use.</p>
             </div>
+        </a>
             <div class="tool-card">
                 <i class="fas fa-crop"></i>
                 <h3>Image Resizer</h3>
