--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section class="tools" id="image-tools">
         <h2>Image Tools</h2>
         <div class="tool-cards">
-            <a href="/Tool/img-compressor.html" class="tool-card-link">
+            <a href="/Tool/img-compress.html" class="tool-card-link">
                 <div class="tool-card">
                 <i class="fas fa-image"></i>
                     <h3>Image Compressor</h3>
