--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                 </div>
             </a>
             <div class="tool-card">
+                <a href="/Tool/img-resizer.html" class="tool-card-link">
                 <i class="fas fa-crop"></i>
                 <h3>Image Resizer</h3>
                 <p>Resize images to any dimension quickly and easily.</p>
