--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
         <h2>PDF Tools</h2>
         <div class="tool-cards">
             <div class="tool-card">
+                <a href="/Tool/compress-pdf.html" class="tool-card-link">
                 <i class="fas fa-file-pdf"></i>
                 <h3>PDF Compressor</h3>
                 <p>Reduce the size of your PDF files without compromising quality.</p>
